# jetson-intro-to-distillation

./: .gitignore  eval_open_clip_on_stl10.py  precompute_embeddings.py  pyproject.toml  train_linear_classification_head.py  train_student_model.py
jetson_distillation/utils/: open_images_utils.py  stl10_utils.py
