[tool.poetry]
name = "jetson_distillation"
version = "0.1.0"
description = ""
authors = ["nvidia nvidia <nvidia@nvidia.com>"]
readme = "README.md"
packages = [
    { include = "jetson_distillation" },
    { include = "jetson_distillation/utils" },
]


[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.33.2"
botocore = "^1.33.2"
torch = {url = "https://developer.download.nvidia.cn/compute/redist/jp/v512/pytorch/torch-2.1.0a0+41361538.nv23.06-cp38-cp38-linux_aarch64.whl"}
tensorboard = "2.14.0"
open-clip-torch = {git = "https://github.com/mlfoundations/open_clip.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
