[tool.poetry]
name = "jetson_distillation"
version = "0.1.0"
description = ""
authors = ["nvidia nvidia <nvidia@nvidia.com>"]
readme = "README.md"
packages = [
    { include = "jetson_distillation" },
    { include = "jetson_distillation/utils" },
]


[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.33.2"
botocore = "^1.33.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
